--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
     text-decoration: none;
     color: black;
     padding: 0 0 0 45px;
-    font-family: Raleway;
+    font-family: Raleway, 'Times New Roman', Times, serif;
 }
 
 .topNav a:hover {
@@ -50,6 +50,37 @@ header {
 .heroPageLeft {
     display: ;
     max-width: 50%;
+}
+
+h1 {
+    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 3.0rem;
+}
+
+.heroPageInfoText {
+    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-size: 1.4rem;
+}
+
+.heroPageButtonForm {
+    display: flex;
+    flex-direction: row;
+}
+
+.heroPageButtonForm input[type=text] {
+    font-family: Raleway, 'Times New Roman', Times, serif;
+    padding:0.5em 10em 0.5em 0.5em;
+    margin: 0 25px 0 0;
+}
+
+.heroPageButtonForm button {
+    font-family: Raleway, 'Times New Roman', Times, serif;
+    color: white;
+    background-color: hsl(224, 93%, 58%);
+    padding:0.5em 4.5em;
+    border: none;
+    border-radius: 4px;
 }
 
 .heroPageRight {
