--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
     text-decoration: none;
     color: black;
     padding: 0 0 0 45px;
-    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
 }
 
 .topNav a:hover {
@@ -60,13 +60,13 @@ header {
 }
 
 h1 {
-    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
     font-weight: 700;
     font-size: 3.0rem;
 }
 
 .heroPageInfoText {
-    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
     font-size: 1.4rem;
 }
 
@@ -76,13 +76,13 @@ h1 {
 }
 
 .heroPageButtonForm input[type=text] {
-    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
     padding:0.5em 10em 0.5em 0.5em;
     margin: 0 25px 0 0;
 }
 
 .heroPageButtonForm button {
-    font-family: Raleway, 'Times New Roman', Times, serif;
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
     color: white;
     background-color: hsl(224, 93%, 58%);
     padding:0.5em 4.5em;
@@ -100,19 +100,94 @@ h1 {
 /* --- INFORMATION PAGE --- */
 .bigCurve {
     width: 100%;
-
+    position: relative;
+    top: 10px;
 }
 
 .infoPage {
-    background-color: hsl(240, 75%, 98%);
+    background-color: #f8f8fe;
     display: flex;
     align-items: center;
     height: 80vh;
+    padding: 0 0 0 100px;
 }
 
 h2 {
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+
+.infoPageText {
+    font-family: 'Open Sans', 'Times New Roman', 'Times', 'serif';
+    font-size: 1.0rem;
     margin: 0px;
 }
+
+.infoPageButton {
+    /* text-decoration: underline; */
+    margin: 0 0 25px 0;
+}
+
+.infoButton{
+    display: flex;
+    align-items: center;
+    background: none;
+    border: none;
+    color: #3da08f;
+}
+
+hr {
+    max-width: 160px;
+    position: relative;
+    right: 320px;
+    height: 1px;
+    border: none;
+    background-color:  #3da08f;
+}
+
+.infoArrow {
+    padding: 0 0 0 5px;
+}
+
+.reviewCard {
+    max-width: 50%;
+    background-color: white;
+    border-radius: 9px;
+    box-shadow: 5px 5px 28px 4px rgba(0,0,0,0.16);
+    padding: 30px;
+}
+
+.reviewCard p {
+    font-family: 'Open Sans', 'Times New Roman', 'Times', 'serif';
+    font-size: 0.9rem;
+}
+
+.testimonial {
+    display: flex;
+}
+
+.testimonial img {
+    border-radius: 50%;
+    max-height: 50px;
+}
+
+.nameAndPosition {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.testimonialName {
+    margin: 0 0 0 5px;
+    font-size: 5px;
+    font-weight: 700;
+}
+
+.testimonialPositon {
+    margin: 5px 0 0 0;
+}
+
 
 .infoImg {
     height: 50vh;
