--- a/style.css
+++ b/style.css
@@ -180,8 +180,8 @@ hr {
 
 .testimonialName {
     margin: 0 0 0 5px;
-    font-size: 5px;
-    font-weight: 700;
+    /* font-size: 0.3em;
+    font-weight: 700; */
 }
 
 .testimonialPositon {
