--- a/style.css
+++ b/style.css
@@ -192,3 +192,60 @@ hr {
 .infoImg {
     height: 50vh;
 }
+
+/* --- LANDING PAGE --- */
+
+.landingPageBackground {
+    background-color: hsl(238, 22%, 44%);
+    display: flex;
+    flex-direction: row;
+}
+
+.landingPage {
+    display: flex;
+    height: 38vh;
+    align-items: center;
+}
+
+.landingPageRightSide {
+    max-width: 50%;
+}
+
+h3 {
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
+    font-size: 2rem;
+    color: white;
+}
+
+.landingPageRightSide p {
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
+    color: white;
+    max-width: 67%;
+}
+
+.landingPageLeftSide {
+    max-width: 50%;
+}
+
+.landingPageLeftSide input[type=text] {
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
+    padding:0.5em 10em 0.5em 0.5em;
+    margin: 0 25px 0 0;
+}
+
+.landingPageLeftSide button {
+    font-family: 'Raleway', 'Times New Roman', 'Times', 'serif';
+    color: white;
+    background-color: hsl(224, 93%, 58%);
+    padding:1em 4.5em;
+    margin: 30px 0 0 0;
+    border: none;
+    border-radius: 4px;
+}
+
+
+
+
+
+
+
